--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,10 +18,10 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: action/checkout@V2
+        uses: actions/checkout@v3
         
       - name: Set up JDK 11
-        uses: action/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
           
