--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,41 +18,41 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
           java-version: 11
           
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
         shell: bash
         
-      - name: BUild with Gradle
-        run: ./gradlew build
-        shell: bash
+#       - name: BUild with Gradle
+#         run: ./gradlew build
+#         shell: bash
         
-      - name: Make zip file
-        run: zip -r ./$GITHUB_SHA .
-        shell: bash
+#       - name: Make zip file
+#         run: zip -r ./$GITHUB_SHA .
+#         shell: bash
         
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ secrets.AWS_REGION }}
       
-      - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+#       - name: Upload to S3
+#         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
         
-      - name: Code Deploy
-        run: |
-          aws deploy create-deployment \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME}} \
-          --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP}} \
-          --s3-location bucket=$S3_BUCKET_NAME, bundleType=zip, key=$GITHUB_SHA.zip
+#       - name: Code Deploy
+#         run: |
+#           aws deploy create-deployment \
+#           --deployment-config-name CodeDeployDefault.AllAtOnce \
+#           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME}} \
+#           --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP}} \
+#           --s3-location bucket=$S3_BUCKET_NAME, bundleType=zip, key=$GITHUB_SHA.zip
         
     
