--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
-env:
-   S3_BUCKET_NAME: izocuna-bucket
-   CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-TEST
-   CODE_DEPLOY_DEPLOYMENT_GROUP: CODE-DEPLOY-GROUP
+# env:
+#    S3_BUCKET_NAME: izocuna-bucket
+#    CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-TEST
+#    CODE_DEPLOY_DEPLOYMENT_GROUP: CODE-DEPLOY-GROUP
 
 permissions:
   contents: read
