--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,7 +27,7 @@ jobs:
           java-version: 11
           
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+        run: chmod +x gradlew
         shell: bash
         
 #       - name: BUild with Gradle
