--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,16 +23,13 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: 11
-          
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+ 
+      - name: BUild with Gradle
+        run: ./gradlew build --no-daemon
         shell: bash
-        
-#       - name: BUild with Gradle
-#         run: ./gradlew build
-#         shell: bash
         
 #       - name: Make zip file
 #         run: zip -r ./$GITHUB_SHA .
