--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,10 +24,9 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
-
-      - name: BUild with Gradle
-        run: build gradle
+          java-version: '17'
+      - run: java --version
+ 
    
 #       - name: Make zip file
 #         run: zip -r ./$GITHUB_SHA .
