--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,8 +24,17 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
-      - run: ./gradlew build --no-daemon
+          java-version: '11'
+          
+      - name: Gradle Caching
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
  
    
 #       - name: Make zip file
