--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,11 +26,11 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
           
-      - name: Gradle Wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
  
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+      - name: Execute Gradle build
+        uses: ./gradlew build
  
 #       - name: Make zip file
 #         run: zip -r ./$GITHUB_SHA .
