--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,11 +26,9 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
           
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
- 
-      - name: Execute Gradle build
-        uses: ./gradlew build
+      - name: Gradle Build Action
+        uses: gradle/gradle-build-action@v2.5.1
+
  
 #       - name: Make zip file
 #         run: zip -r ./$GITHUB_SHA .
