--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,7 +28,9 @@ jobs:
           
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.5.1
-
+      
+      - name: Execute Gradle build
+        run: ./gradlew build
  
 #       - name: Make zip file
 #         run: zip -r ./$GITHUB_SHA .
